# Backtester

./: CMakeLists.txt  README
cpp_project/: a.out  target_positions.csv
src/: ArgParser.h  Backtester.cpp  Backtester.h  CMakeLists.txt  CSVReader.h  DataModel.h  ExecutionAlgorithm.h  Fill.cpp  Fill.h  FillManager.cpp  FillManager.h  MarketDataManager.cpp  MarketDataManager.h  MinuteBarRecord.cpp  MinuteBarRecord.cpp.txt  MinuteBarRecord.h  PnLRecord.cpp  PnLRecord.h  PortfolioManager.cpp  PortfolioManager.h  PortfolioSnapshot.cpp  PortfolioSnapshot.h  Security.cpp  Security.h  SecurityUniverse.cpp  SecurityUniverse.h  TargetPositionRecord.cpp  TargetPositionRecord.h  WeekIntervalData.h  XYAlgorithm.cpp  XYAlgorithm.h  backtest_util.h  design.txt  main.cpp
